# admin_pj

./: .env  .firebaserc  .gitignore  Dockerfile  docker-compose.yml  firestore.rules  pyproject.toml  readme.md
api/: functions.py  main.py  readme.md  test_api.py
api/assets/: address_strings.csv  order_strings.csv
api/common/: functions.py  models.py  types.py
